--- a/test-entity.yaml
+++ b/test-entity.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Test
 metadata:
   name: example-test
-  description: An example entity of Kind: Test.
+  description: An example entity of Kind Test.
 spec:
   owner: team-a
   environment: test-environment
